force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Is_Outbound__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Is_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Outbound</label>
    <type>Checkbox</type>
</CustomField>