force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Media_Provider__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Media_Provider__c</fullName>
    <label>Media Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>