force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Message_Intent__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Message_Intent__c</fullName>
    <label>Message Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>