force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Persona_Author_Labels__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Persona_Author_Labels__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Persona Author Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>