force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Persona_First_Name__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Persona_First_Name__c</fullName>
    <label>Persona First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>