force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Persona_Followers__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Persona_Followers__c</fullName>
    <label>Persona Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>