force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Post_Recipient__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Post_Recipient__c</fullName>
    <label>Post Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>