force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Post_URL__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Post_URL__c</fullName>
    <label>Post URL</label>
    <type>Url</type>
</CustomField>