force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Posted_At__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Posted_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Posted At</label>
    <type>DateTime</type>
</CustomField>