force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Raw_Persona_Data__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Raw_Persona_Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Raw Persona Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>