force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Salesforce_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Salesforce_Contact_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>