force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Skip_Create_Case__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Skip_Create_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Create Case</label>
    <type>Checkbox</type>
</CustomField>