force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Sprout_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Sprout_Message_Type__c</fullName>
    <label>Sprout Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>