force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/SproutSocialApp__Unsent_Parent__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Unsent_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsent Parent</label>
    <type>Checkbox</type>
</CustomField>