force-app/main/default/objects/SproutSocialApp__Sprout_Social_Data_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>SproutSocialApp__Message_Type__c + SproutSocialApp__Message_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>